--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,16 +1,17 @@
-prefix: '&8 ▪ &7'
-adminPrefix: '&8 ▪ &7'
+prefix: '&8▎ &7'
+adminPrefix: '&8▎ &7'
 reload: 'Config &a&nsuccessfully&r &7reloaded.'
 cubespawn: 'Cube is &a&nsuccessfully&r &7spawned.'
 clearcubes: 'Cubes are &a&nsuccessfully&r &7cleared.'
 alreadyIngame: 'You''re already in match.'
-specifyArena: 'Please specify an arena before joining the match. &f/fc join &3[&a1v1, 2v2, 3v3, or 4v4&3]'
+specifyArena: 'Please specify an arena before joining the match. &f/fc join &3[&a1v1, 2v2, 3v3, 4v4 or 5v5&3]'
 no1v1: 'There''s no &b1v1 &7arenas at the time.'
 no2v2: 'There''s no &b2v2 &7arenas at the time.'
 no3v3: 'There''s no &b3v3 &7arenas at the time.'
 no4v4: 'There''s no &b4v4 &7arenas at the time.'
+no5v5: 'There''s no &b5v5 &7arenas at the time.'
 teamNoArgs: '&7If you want to team with someone type &f/fc team &2[&a2v2,
-  3v3 or 4v4&2] &6[&eplayer&6]&7.
+  3v3, 4v4 or 5v5&2] &6[&eplayer&6]&7.
   &7In order to accept or decline team request type &f/fc
   team &2[&aaccept or decline&2]'
 ingameTeam: 'You can''t send team requests until match ends.'
@@ -37,7 +38,7 @@ playerNoStats: '&b{player} &7haven''t played yet.'
 notIngame: 'You''re not in game.'
 cantLeave: 'You can''t leave the match that already started.'
 undo: 'Undo &a&nsuccessful&r'
-invalidArenaType: 'Invalid arena type! &f/fc setuparena &3[&b1v1, 2v2, 3v3 or 4v4&3]'
+invalidArenaType: 'Invalid arena type! &f/fc setuparena &3[&b1v1, 2v2, 3v3, 4v4 or 5v5&3]'
 arenaCreation: 'Arena setup started!'
 arenaCreation1: 'If you made a mistake, use &f/fc undo'
 arenaCreation2: '&bStep 1: &7Stay in the middle of the blue goal, look towards the
@@ -56,11 +57,10 @@ help:
   - '&8 ▪ &3/fc join [arena]: &7&oJoin the match arena'
   - '&8 ▪ &3/fc team [arena] [player]: &7&oSend a team request'
   - '&8 ▪ &3/fc team [accept, decline, cancel]: &7&oRespond to team request'
+  - '&8 ▪ &3/fc setscoremessage [message]: &7&oSet a custom score message'
   - '&8 ▪ &3/fc takeplace: &7&oTake place in the match'
   - '&8 ▪ &3/fc stats: &7&oHave a look at your stats'
   - '&8 ▪ &3/fc best: &7&oShow the server leaderboard'
-  - '&8 ▪ &3/fc ff: &7&oSend a request for match forfeit'
-  - '&8 ▪ &3/fc glove: &7&oGet a goalman glove'
   - '&8 ▪ &3/fc particles: &7&oSelect a particle'
   - '&8 ▪ &3/fc goalexplosions: &7&oSelect a goal explosion'
   - ''
@@ -72,12 +72,14 @@ adminHelp:
   - '&8 ▪ &3/fc cleararenas: &7&oPurge match arenas'
   - '&8 ▪ &3/fc forcestart [arena]: &7&oStart the match forcefully'
   - '&8 ▪ &3/fc autohitter [on/off]: &7&oEnable/disable auto-hitter'
+  - '&8 ▪ &3/fc glove: &7&oGet a goalman glove'
   - '&8 ▪ &3/fc ban [player] [duration]: &7&oBan player from using qFootcube'
   - '&8 ▪ &3/fc unban [player]: &7&oUnban player from using qFootcube'
   - '&8 ▪ &3/fc enable: &7&oEnables the plugin'
   - '&8 ▪ &3/fc disable: &7&oDisables the plugin'
   - '&8 ▪ &3/fc setlobby: &7&oSet match lobby'
   - '&8 ▪ &3/fc setkickpower: &7&oSet server kick power'
+  - '&8 ▪ &3/fc setchargespeed: &7&oSet server charge speed'
   - '&8 ▪ &3/fc setunchargedkickpower: &7&oSet server kick power'
   - '&8 ▪ &3/fc commanddisabler: &7&oEnable ingame command'
   - ''
@@ -118,36 +120,45 @@ startingMatch: 'Match is starting.'
 continueMatch: 'Match is continuing.'
 timesUpRed: 'Time''s up! Red team won. &c{red} &f - &b{blue}'
 timesUpBlue: 'Time''s up! Blue team won. &b{blue} &f - &c{red}'
-timesUpRedFF: 'Time''s up! Red team won. Blue team forfeited.'
-timesUpBlueFF: 'Time''s up! Blue team won. Red team forfeited.'
-reward1: 'You''ve got &a$200 &7for the win.'
-bonus: 'You''ve got &a$100 bonus credits for &b{wins} &7wins in a row.'
-bonus1: '&7 wins in a row.'
+winReward: 'You''ve got &a${reward} &7for the win.'
 1v1noStats: '1v1 matches are not included in &b/stats&7.'
-reward2: 'You''ve got &a$15 &7for the win.'
 tied: 'Time''s up! The match is tied.'
-reward3: 'You''ve got &a$15 &7for tied game.'
-reward4: 'You''ve got &a$100 &7for the scored goal.'
-reward5: 'You''ve got &a$200 &7for scoring hat-trick.'
+tiedReward: 'You''ve got &a${reward} &7for tied game.'
+scoreReward: 'You''ve got &a${reward} &7for the scored goal.'
+hattyReward: 'You''ve got &a${reward} &7for scoring hat-trick.'
 hatty: '&b{player} &7scored hat-trick.'
-hatty1: '&7 scored hat-trick.'
 scoreGoal: '&b{player} &7scored a goal.'
+og: '&b{player} &7scored an own goal!'
+customScoreMessage: '&b{player} &7scored a goal. &e{message}'
 scoredInc: '&b{player} &7scored a fabulous goal &7from &e{distance}m.'
 scoredNorm: '&b{player} &7scored a goal &7from &b{distance}m.'
 scoredIncAss: '&b{player} &7scored a fabulous goal assisted by&b {assist} &7from &e{distance}m.'
 scoredNormAss: '&b{player} &7scored a goal assisted by &b{assist}&7 from &b{distance}m.'
 continue5sec: 'Match is about to continue in 5 seconds.'
 result: 'Current result: &cRed {red} &f- &b{blue} Blue'
-hs: '&lRecord holders:'
-hs1: '&8 ▪ &7Most scored goals:'
-hs2: '&8 ▪ &7Most assists:'
-hs3: '&8 ▪ &7Most wins:'
-hs4: '&8 ▪ &7Longest win streak:'
+highscore:
+  - '&lRecord holders:'
+  - '&8 ▪ &7Most scored goals:'
+  - '&7 1. &a{first_goals} &8 - &b{first_goals_count}'
+  - '&7 1. &e{second_goals} &8 - &b{second_goals_count}'
+  - '&7 1. &c{third_goals} &8 - &b{third_goals_count}'
+  - '&8 ▪ &7Most assists:'
+  - '&7 1. &e{first_assists} &8 - &b{first_assists_count}'
+  - '&7 1. &a{second_assists} &8 - &b{second_assists_count}'
+  - '&7 1. &c{third_assists} &8 - &b{third_assists_count}'
+  - '&8 ▪ &7Most wins:'
+  - '&7 1. &e{first_wins} &8 - &b{first_wins_count}'
+  - '&7 1. &a{second_wins} &8 - &b{second_wins_count}'
+  - '&7 1. &c{third_wins} &8 - &b{third_wins_count}'
+  - '&8 ▪ &7Longest win streak:'
+  - '&7 1. &e{first_win_streak} &8 - &b{first_win_streak_count}'
+  - '&7 1. &a{second_win_streak} &8 - &b{second_win_streak_count}'
+  - '&7 1. &c{third_win_streak} &8 - &b{third_win_streak_count}'
 teamYourself: 'You can''t send a team request to yourself.'
 activatedParticle: 'Particle&e{effect} &7activated.'
 particleNoPermission: 'You don''t own&e{effect} &7particle.'
 disabledParticles: 'Particles disabled.'
-assistReward: '&7You''ve got &b$50 &7for assistment.'
+assistReward: '&7You''ve got &a${reward} &7for assistment.'
 setLobby: '&7Match lobby has been set.'
 autoHitterUsage: "&7Use &f/fc autohitter &3[&bon&3/&boff&3]"
 tcUsage: "&7Use &f/tc &3[&bmessage&3]"
@@ -156,16 +167,20 @@ autoHitterOn: "&7Auto Hitter &a&nsuccessfully&r &7enabled."
 autoAlreadyHitterOff: "&7Auto Hitter is already off."
 autoHitterOff: "&7Auto Hitter &a&nsuccessfully&r &7disabled."
 arenaNotSpecified: "&7You need to specify arena type."
+messageNotSpecified: "&7You need to specify message content."
+messageTooLong: "&7Message is too long! &3[&bLimit: 30 characters&3)"
+messageSuccess: "&7Message &a&nsuccessfully&r &7set!"
 creativeBlock: "&7You can't shoot ball in creative."
-forceStartUsage: "&7Use &f/fc forcestart &3[&b1v1, 2v2, 3v3 or 4v4&3]"
-invalidArenaTypeFS: 'Invalid arena type! &f/fc forcestart &3[&b1v1, 2v2, 3v3 or 4v4&3]'
-ff: '&7You''re teammate requested a forfeit: &a{a}&2/&a{m}'
+forceStartUsage: "&7Use &f/fc forcestart &3[&b1v1, 2v2, 3v3, 4v4 or 5v5&3]"
+invalidArenaTypeFS: 'Invalid arena type! &f/fc forcestart &3[&b1v1, 2v2, 3v3, 4v4 or 5v5&3]'
 overtimeTitle: '&4&lOVERTIME'
 overtimeMessage: '&fYou''ve got additional 60 seconds to score a goal!'
 setkpError: '&7Invalid kickpower value!'
 setkpSuccess: '&7Kickpower &a&nsuccessfully&r &7set to &b{kickpower}'
 setukpError: '&7Invalid kickpower value!'
 setukpSuccess: '&7Uncharged kickpower &a&nsuccessfully&r &7set to &b{kickpower}'
+setchError: '&7Invalid charge speed value!'
+setchSuccess: '&7Charge speed &a&nsuccessfully&r &7set to &b{charge}'
 banned: "&7You are banned from footcube."
 banUsage: "&7Usage: &f/fc ban &3[&bplayer&3] &6[&eduration&6]"
 banNoReason: "&7You're banned from qFootcube for &e{time}"
