--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spath>C:/Users/crash/Documents/spigot-1.8.8-R0.1-SNAPSHOT.jar</spath>
-        <ipath>C:/Users/crash/Documents/ImageRenderer.jar</ipath>
+        <spath>C:\Users\Ivan Gajic\Documents\spigot-1.8.8-R0.1-SNAPSHOT-latest.jar</spath>
     </properties>
 
     <build>
@@ -160,6 +159,11 @@
             <groupId>net.kyori</groupId>
             <artifactId>adventure-platform-bukkit</artifactId>
             <version>4.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.8.2</version>
         </dependency>
     </dependencies>
 </project>
