--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spath>C:\Users\Ivan Gajic\Documents\spigot-1.8.8-R0.1-SNAPSHOT-latest.jar</spath>
+        <spath>/home/neon/Other/Downloads/spigot-1.8.8-R0.1-SNAPSHOT-latest.jar</spath>
     </properties>
 
     <build>
@@ -164,6 +164,11 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
             <version>4.8.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ConnorLinfoot</groupId>
+            <artifactId>TitleAPI</artifactId>
+            <version>1.8.1</version>
         </dependency>
     </dependencies>
 </project>
