promenio loop u iterator, promenio nacin na koji se brise lopta iz mape, sad se brise iz iteratora da ne baca exception dodao max spawn cube u 100 blok radiusu na 5

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -2,6 +2,7 @@ prefix: '&8▎ &7'
 adminPrefix: '&8▎ &7'
 reload: 'Config &a&nsuccessfully&r &7reloaded.'
 cubespawn: 'Cube is &a&nsuccessfully&r &7spawned.'
+toomanycubes: 'Can't spawn any more cubes in this area.'
 clearcubes: 'Cubes are &a&nsuccessfully&r &7cleared.'
 alreadyIngame: 'You''re already in match.'
 specifyArena: 'Please specify an arena before joining the match. &f/fc join &3[&a1v1, 2v2, 3v3, 4v4 or 5v5&3]'
