--- a/pom.xml
+++ b/pom.xml
@@ -161,9 +161,9 @@
             <version>4.3.0</version>
         </dependency>
         <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver-sync</artifactId>
-            <version>4.8.2</version>
+            <groupId>com.github.ConnorLinfoot</groupId>
+            <artifactId>TitleAPI</artifactId>
+            <version>1.8.1</version>
         </dependency>
         <dependency>
             <groupId>com.github.ConnorLinfoot</groupId>
