--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -118,6 +118,12 @@ leaveMatch: 'Use &b/fc leave &7to leave the match.'
 teamWith: 'You''re in a team with &b{player}'
 changeTeamWith: 'You changed team with &b{player1} &7and &b{player2}&7.'
 startingMatch: 'Match is starting.'
+startingMatchLong:
+  - '&e'
+  - '&c  &lNemojte biti AFK u igri! &6⚠'
+  - '&f  Ušli ste u &e{matchType} &fmod. Igra može trajati čak &e5 min&f.'
+  - '&f  Ne izlazite sa servera osim ako igra nije &nnerešena&f ili &nvodite&f.'
+  - '&e'
 continueMatch: 'Match is continuing.'
 timesUpRed: 'Time''s up! Red team won. &c{red} &f - &b{blue}'
 timesUpBlue: 'Time''s up! Blue team won. &b{blue} &f - &c{red}'
